force-app/main/default/objects/CC_MCC_Grupo_Colaborador__c/CC_MCC_Grupo_Colaborador__c.object-meta.xml
<CustomObject>
    <label>MCC Grupo Colaborador</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Grupo Colaborador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCC Grupos Colaboradores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>