force-app/main/default/objects/CC_MCC_Grupo_Colaborador__c/fields/CC_MCC__c.field-meta.xml
<CustomField>
    <fullName>CC_MCC__c</fullName>
    <label>CC_MCC</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Grupos Colaboradores</relationshipLabel>
    <relationshipName>MCC_Grupos_Colaboradores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>