force-app/main/default/objects/CC_MCC_Grupo_Colaborador__c/fields/SAC_PorcentajeAsignacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_PorcentajeAsignacion__c</fullName>
    <label>Porcentaje asignación</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>