force-app/main/default/objects/CC_MCC_Grupo_Colaborador__c/fields/SEG_Grupo_respuesta__c.field-meta.xml
<CustomField>
    <fullName>SEG_Grupo_respuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo respuesta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo Operativo Segmentos, Grupo Automático Segmentos</value>
        </filterItems>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.SEG_GrupoSegmentos__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>MCC Grupos Colaboradores (Grupo respuesta)</relationshipLabel>
    <relationshipName>MCC_Grupos_Colaboradores1</relationshipName>
    <type>Lookup</type>
</CustomField>