force-app/main/default/objects/CC_MCC_Grupo_Colaborador__c/fields/SEG_OperativaValija__c.field-meta.xml
<CustomField>
    <fullName>SEG_OperativaValija__c</fullName>
    <description>Código de operativa a enviar al colaborador de tipo Valija</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Código de operativa a enviar al colaborador de tipo Valija</inlineHelpText>
    <label>Operativa Valija</label>
    <length>5</length>
    <type>Text</type>
</CustomField>