force-app/main/default/objects/CC_MCC_Grupo_Colaborador__c/fields/SEG_Organizacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Organizacion__c</fullName>
    <label>Organización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banca Corporativa</fullName>
            </value>
            <value>
                <fullName>Centro Empresas</fullName>
            </value>
            <value>
                <fullName>Instituciones</fullName>
            </value>
            <value>
                <fullName>Centro Soporte Especialistas</fullName>
            </value>
            <value>
                <fullName>Financiación Estructurada</fullName>
            </value>
            <value>
                <fullName>Todas</fullName>
            </value>
            <value>
                <fullName>PYMES</fullName>
            </value>
            <value>
                <fullName>Banca Internacional</fullName>
            </value>
            <value>
                <fullName>UGE</fullName>
                <isActive>false</isActive>
                <label>UGE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>