force-app/main/default/objects/CC_MCC_Grupo_Colaborador__c/fields/SEG_Zona__c.field-meta.xml
<CustomField>
    <fullName>SEG_Zona__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SEG_Organizacion__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporativa</fullName>
            </value>
            <value>
                <fullName>Empresas Andalucía</fullName>
            </value>
            <value>
                <fullName>Empresas Barcelona</fullName>
            </value>
            <value>
                <fullName>Empresas Castilla La Mancha</fullName>
            </value>
            <value>
                <fullName>Empresas Cataluña</fullName>
            </value>
            <value>
                <fullName>Empresas Madrid</fullName>
            </value>
            <value>
                <fullName>Empresas Valencia</fullName>
            </value>
            <value>
                <fullName>Empresas Norte</fullName>
            </value>
            <value>
                <fullName>Empresas Baleares</fullName>
            </value>
            <value>
                <fullName>Empresas Canarias</fullName>
            </value>
            <value>
                <fullName>Empresas Castilla y León</fullName>
            </value>
            <value>
                <fullName>Empresas Ebro</fullName>
            </value>
            <value>
                <fullName>Empresas Murcia</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>Créditos Sindicados</fullName>
            </value>
            <value>
                <fullName>Operaciones</fullName>
            </value>
            <value>
                <fullName>Seguimiento</fullName>
            </value>
            <value>
                <fullName>Soporte</fullName>
            </value>
            <value>
                <fullName>Instituciones Canarias</fullName>
            </value>
            <value>
                <fullName>Instituciones Cataluña</fullName>
            </value>
            <value>
                <fullName>Instituciones Centro</fullName>
            </value>
            <value>
                <fullName>Instituciones Este</fullName>
            </value>
            <value>
                <fullName>Instituciones Norte</fullName>
            </value>
            <value>
                <fullName>Instituciones Sur</fullName>
            </value>
            <value>
                <fullName>Todas</fullName>
            </value>
            <value>
                <fullName>Soporte Pymes 1</fullName>
            </value>
            <value>
                <fullName>Soporte Pymes 2</fullName>
            </value>
            <value>
                <fullName>Soporte Pymes 3</fullName>
            </value>
            <value>
                <fullName>Soporte Pymes 4</fullName>
            </value>
            <value>
                <fullName>Sucursales Internacionales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>