force-app/main/default/objects/CC_MCC_Grupo_Colaborador__c/fields/SPV_Tipo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>SPV_Tipo_Cliente__c</fullName>
    <description>Campo para seleccionar el tipo de cliente del registro</description>
    <label>Tipo cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>SAC</fullName>
            </value>
            <value>
                <fullName>SPV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>