force-app/main/default/objects/CC_MCC_Grupo_Colaborador__c/validationRules/SAC_MCCTipoCliente.validationRule-meta.xml
<ValidationRule>
    <fullName>SAC_MCCTipoCliente</fullName>
    <active>true</active>
    <description>Validation rule para verificar que los usuarios de SAC solo pueden crear registro con tipo cliente SAC</description>
    <errorConditionFormula>AND (
			 AND(
				    !$Permission.CBK_BypassValidationRules,
        !$Permission.SAC_BypassValidationRules								
				),
				AND(
				    $Profile.Name = &apos;SAC_General&apos;,
								NOT(ISPICKVAL( SPV_Tipo_Cliente__c, &quot;SAC&quot;))
				)
)</errorConditionFormula>
    <errorDisplayField>SPV_Tipo_Cliente__c</errorDisplayField>
    <errorMessage>Solo se pueden crear registros del tipo cliente SAC</errorMessage>
</ValidationRule>