force-app/main/default/objects/CC_MCC_Grupo_Colaborador__c/validationRules/SEG_MCCGrupoSegmentos.validationRule-meta.xml
<ValidationRule>
    <fullName>SEG_MCCGrupoSegmentos</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( ISPICKVAL( CC_MCC__r.CC_Tipo_Cliente__c  , &quot;Segmentos&quot;), CC_Grupo_Colaborador__r.SEG_GrupoSegmentos__c = FALSE, FALSE )</errorConditionFormula>
    <errorDisplayField>CC_Grupo_Colaborador__c</errorDisplayField>
    <errorMessage>El negocio del MCC es Segmentos, solo se puede añadir un grupo Segmentos.</errorMessage>
</ValidationRule>